ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 2.3.1
    • Affects Version/s: None
    • Component/s: JavaScript
    • Environment:
      Windows V8
    • Fully Compatible
    • Windows
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Access violation reading from address 0:

      http://buildlogs.mongodb.org/Windows%2064-bit%202008%2B/builds/785/test/js/mr_killop.js

      Tue Nov 06 21:12:15.243 [conn13] going to kill op: op: 1407.0
      Tue Nov 06 21:12:15.368 [conn28] *** unhandled exception (access violation) at 0x000000013F456777, terminating
      Tue Nov 06 21:12:15.368 [conn28] *** access violation was a read from 0x0000000000000000
      Tue Nov 06 21:12:15.368 [conn28] *** stack trace for unhandled exception:
      Tue Nov 06 21:12:16.304 [conn28] mongod.exe    c:\program files (x86)\microsoft visual studio 10.0\vc\include\ostream(771)  std::operator<<<std::char_traits<char> >+0x37
      Tue Nov 06 21:12:16.304 [conn28] mongod.exe    ...\src\mongo\scripting\v8_utils.cpp(65)                                     mongo::toSTLString+0x193
      Tue Nov 06 21:12:16.304 [conn28] mongod.exe    ...\src\mongo\scripting\engine_v8.cpp(831)                                   mongo::V8Scope::invoke+0x60e
      Tue Nov 06 21:12:16.304 [conn28] mongod.exe    ...\src\mongo\scripting\engine.cpp(434)                                      mongo::PooledScope::invoke+0x3e
      Tue Nov 06 21:12:16.304 [conn28] mongod.exe    ...\src\mongo\db\commands\mr.cpp(73)                                         mongo::mr::JSMapper::map+0x7c
      Tue Nov 06 21:12:16.304 [conn28] mongod.exe    ...\src\mongo\db\commands\mr.cpp(1125)                                       mongo::mr::MapReduceCommand::run+0xfd8
      Tue Nov 06 21:12:16.304 [conn28] mongod.exe    ...\src\mongo\db\dbcommands.cpp(1643)                                        mongo::_execCommand+0x6a
      Tue Nov 06 21:12:16.304 [conn28] mongod.exe    ...\src\mongo\db\dbcommands.cpp(1770)                                        mongo::execCommand+0x967
      Tue Nov 06 21:12:16.304 [conn28] mongod.exe    ...\src\mongo\db\dbcommands.cpp(1866)                                        mongo::_runCommands+0x41b
      Tue Nov 06 21:12:16.304 [conn28] mongod.exe    ...\src\mongo\db\ops\query.cpp(43)                                           mongo::runCommands+0x46
      Tue Nov 06 21:12:16.304 [conn28] mongod.exe    ...\src\mongo\db\ops\query.cpp(939)                                          mongo::runQuery+0x420
      Tue Nov 06 21:12:16.304 [conn28] mongod.exe    ...\src\mongo\db\instance.cpp(245)                                           mongo::receivedQuery+0x16d
      Tue Nov 06 21:12:16.304 [conn28] mongod.exe    ...\src\mongo\db\instance.cpp(391)                                           mongo::assembleResponse+0x2ed
      Tue Nov 06 21:12:16.304 [conn28] mongod.exe    ...\src\mongo\db\db.cpp(197)                                                 mongo::MyMessageHandler::process+0xf5
      Tue Nov 06 21:12:16.304 [conn28] mongod.exe    ...\src\mongo\util\net\message_server_port.cpp(86)                           mongo::pms::threadRun+0x5aa
      Tue Nov 06 21:12:16.304 [conn28] mongod.exe    ...\src\third_party\boost\libs\thread\src\win32\thread.cpp(180)              boost::`anonymous namespace'::thread_start_function+0x21
      Tue Nov 06 21:12:16.304 [conn28] mongod.exe    f:\dd\vctools\crt_bld\self_64_amd64\crt\src\threadex.c(314)                  _callthreadstartex+0x17
      Tue Nov 06 21:12:16.304 [conn28] mongod.exe    f:\dd\vctools\crt_bld\self_64_amd64\crt\src\threadex.c(292)                  _threadstartex+0x7f
      Tue Nov 06 21:12:16.304 [conn28] kernel32.dll                                                                               BaseThreadInitThunk+0xd
      Tue Nov 06 21:12:16.304 [conn28] writing minidump diagnostic file mongo.dmp
      Tue Nov 06 21:12:17.303 [conn28] *** immediate exit due to unhandled exception
      

            Assignee:
            Tad Marshall
            Reporter:
            Tad Marshall
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: