SERVER-7577 Do not try to use filename if not set